--- a/params.yaml
+++ b/params.yaml
@@ -4,3 +4,6 @@ data_ingestion:
 feature_engineering:
   max_features: 100
   ngram_range: (2,2)
+model_building:
+  n_estimators: 80
+  max_depth: 4
